# SteamProto

./: CODE_REVIEW_AND_IMPROVEMENTS.md  COMP-LANG_INFO.info  DataView.qml  FILE_ARCHITECTURE.md  FILE_RELEASE.md  LICENSE.txt  LibraryView.qml  README.md  TODO.txt  UiDataView.qml  main.py  main.pyw  main_backend.py  migration_guide.md  pyproject.toml  remover.py  scanner.py  theme_manager.py  trans_dummy.py  web.py  web.pyw  window.pyw  window.spec
_metadata/: metadata.json  metadata_fix.json  recents.json  settings.json  state.json  ui.json
_qml_insanity/: EditorWindow.qml  ImageBrowserWindow.qml  SettingsWindow.qml  main.py  main.qml  main_backend.py  remover.py
core/: __init__.py  data_manager.py  scan_scheduler.py
data/local/lang/: ar.qm  de.qm  es.qm  fr.qm  ru.qm  translations_ar.qm  translations_de.qm  translations_es.qm  translations_fr.qm  translations_ru.qm  translations_zh.qm  zh.qm
data/local/lang/backup/: translations_ar.ts  translations_de.ts  translations_en.ts  translations_es.ts  translations_fr.ts  translations_ru.ts  translations_zh.ts
data/local/lang/dev/: ar.ts  de.ts  en.ts  es.ts  fr.ts  ru.ts  zh.ts
ui/: __init__.py  data_view.py  editor_window.py  library_view.py  main_window.py  settings_window.py
ui/components/: __init__.py  data_table.py  game_card.py  pixmaps.py
utils/: __init__.py  constants.py  helpers.py
